--- a/style.css
+++ b/style.css
@@ -50,18 +50,29 @@ input {
 }
 
 .weather {
+  display: none;
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 30px;
   text-align: center;
   font-size: 1.2em;
   background-color: #080808;
   opacity: 0.8;
   padding: 13px;
   border-radius: 8px;
+  animation: weatherTopDown 1.5s cubic-bezier(0, 0, 0.26, 1.1);
 }
 
-.weather__condition img {
+@keyframes weatherTopDown {
+  0% {
+    top: -100%;
+  }
+  100% {
+    top: 10px;
+  }
+}
+
+.weather > show .weather__condition img {
   width: 50px;
   height: 50px;
 }
@@ -69,13 +80,21 @@ input {
 .clock {
   margin: 25px 0;
   font-size: 3.5em;
-  animation: topDown 0.5s;
 }
 
-.weather,
-.clock,
-.showing {
+.clock {
   animation: topDown 0.8s;
+}
+
+@keyframes topDown {
+  0% {
+    opacity: 0.5;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .clock h1 {
@@ -113,17 +132,6 @@ button {
 @keyframes shine {
   to {
     background-position: 200% center;
-  }
-}
-
-@keyframes topDown {
-  0% {
-    opacity: 0.5;
-    transform: translateY(-30px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
 
@@ -219,4 +227,53 @@ button {
   background-color: grey;
   border-radius: 8px;
   box-shadow: inset 0px 0px 3px #fff;
+}
+
+.audio-container {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
+  font-size: 1.3em;
+  animation: leftToRight 0.8s cubic-bezier(0, 0, 0.47, 1.08);
+}
+
+@keyframes leftToRight {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 20px;
+  }
+}
+
+.onOff-wrap {
+  margin-right: 8px;
+}
+
+.audioOnOff {
+  color: #080808;
+  cursor: pointer;
+  background-color: #fff;
+  padding: 6px;
+  border-radius: 18px;
+  font-weight: 700;
+  box-shadow: 0 6px #999;
+  user-select: none;
+}
+
+.audioOnOff:active {
+  background-color: #c2c2c2;
+  box-shadow: 0 1px #666;
+  transform: translateY(4px);
+}
+
+.audioNextBtn {
+  cursor: pointer;
+  font-size: 1.4em;
+}
+
+.invisiable {
+  display: none;
 }
