--- a/style.css
+++ b/style.css
@@ -180,6 +180,16 @@ button {
   opacity: 0.8;
   font-size: 1.2em;
   transition: all 300ms ease-out;
+  animation: rightToLeft 1s cubic-bezier(0.14, 0.04, 0.22, 0.87);
+}
+
+@keyframes rightToLeft {
+  0% {
+    right: -30%;
+  }
+  100% {
+    right: 0;
+  }
 }
 
 .todo-wrap h2 {
